--- a/environment.yml
+++ b/environment.yml
@@ -2,155 +2,155 @@ name: ocr
 channels:
   - defaults
 dependencies:
-  - abseil-cpp=20230802.0=h313beb8_2
-  - aiohttp=3.8.5=py38h80987f9_0
-  - aiosignal=1.2.0=pyhd3eb1b0_0
-  - appnope=0.1.2=py38hca03da5_1001
-  - arrow-cpp=11.0.0=hc7aafb3_2
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - async-timeout=4.0.2=py38hca03da5_0
-  - attrs=23.1.0=py38hca03da5_0
-  - aws-c-common=0.6.8=h80987f9_1
-  - aws-c-event-stream=0.1.6=h313beb8_6
-  - aws-checksums=0.1.11=h80987f9_2
-  - aws-sdk-cpp=1.8.185=ha71a6ea_1
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - blas=1.0=openblas
-  - boost-cpp=1.82.0=h48ca7d4_2
-  - bottleneck=1.3.5=py38heec5a64_0
-  - brotli=1.0.9=h1a28f6b_7
-  - brotli-bin=1.0.9=h1a28f6b_7
-  - brotli-python=1.0.9=py38hc377ac9_7
-  - bzip2=1.0.8=h620ffc9_4
-  - c-ares=1.19.1=h80987f9_0
-  - ca-certificates=2023.08.22=hca03da5_0
-  - certifi=2023.7.22=py38hca03da5_0
-  - cffi=1.15.1=py38h80987f9_3
-  - click=8.1.7=py38hca03da5_0
-  - colorama=0.4.6=py38hca03da5_0
-  - comm=0.1.2=py38hca03da5_0
-  - contourpy=1.0.5=py38h525c30c_0
-  - cryptography=41.0.3=py38hd4332d6_0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - debugpy=1.6.7=py38h313beb8_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - et_xmlfile=1.1.0=py38hca03da5_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.12.1=h1192e45_0
-  - frozenlist=1.4.0=py38h80987f9_0
-  - gflags=2.2.2=hc377ac9_0
-  - giflib=5.2.1=h80987f9_3
-  - glog=0.5.0=hc377ac9_0
-  - grpc-cpp=1.48.2=hc60591f_3
-  - gtest=1.14.0=h48ca7d4_0
-  - icu=73.1=h313beb8_0
-  - idna=3.4=py38hca03da5_0
-  - importlib_metadata=6.0.0=hd3eb1b0_0
-  - ipykernel=6.25.0=py38h33ce5c2_0
-  - ipython=8.12.2=py38hca03da5_0
-  - ipywidgets=8.0.4=py38hca03da5_0
-  - jedi=0.18.1=py38hca03da5_1
-  - jinja2=3.1.2=py38hca03da5_0
-  - joblib=1.2.0=py38hca03da5_0
-  - jpeg=9e=h80987f9_1
-  - jsonschema=4.19.2=py38hca03da5_0
-  - jsonschema-specifications=2023.7.1=py38hca03da5_0
-  - jupyter_client=8.6.0=py38hca03da5_0
-  - jupyter_core=5.5.0=py38hca03da5_0
-  - jupyterlab_widgets=3.0.5=py38hca03da5_0
-  - kiwisolver=1.4.4=py38h313beb8_0
-  - krb5=1.20.1=hf3e1bf2_1
-  - lcms2=2.12=hba8e193_0
-  - lerc=3.0=hc377ac9_0
-  - libboost=1.82.0=h0bc93f9_2
-  - libbrotlicommon=1.0.9=h1a28f6b_7
-  - libbrotlidec=1.0.9=h1a28f6b_7
-  - libbrotlienc=1.0.9=h1a28f6b_7
-  - libcurl=8.4.0=h3e2b118_0
-  - libcxx=14.0.6=h848a8c0_0
-  - libdeflate=1.17=h80987f9_1
-  - libedit=3.1.20221030=h80987f9_0
-  - libev=4.33=h1a28f6b_1
-  - libevent=2.1.12=h02f6b3c_1
-  - libffi=3.4.4=hca03da5_0
-  - libgfortran=5.0.0=11_3_0_hca03da5_28
-  - libgfortran5=11.3.0=h009349e_28
-  - libiconv=1.16=h1a28f6b_2
-  - libnghttp2=1.57.0=h62f6fdd_0
-  - libopenblas=0.3.21=h269037a_0
-  - libpng=1.6.39=h80987f9_0
-  - libprotobuf=3.20.3=h514c7bf_0
-  - libsodium=1.0.18=h1a28f6b_0
-  - libssh2=1.10.0=h02f6b3c_2
-  - libthrift=0.15.0=h73c2103_2
-  - libtiff=4.5.1=h313beb8_0
-  - libwebp=1.3.2=ha3663a8_0
-  - libwebp-base=1.3.2=h80987f9_0
-  - llvm-openmp=14.0.6=hc6e5704_0
-  - lz4-c=1.9.4=h313beb8_0
-  - matplotlib-base=3.7.2=py38h46d7db6_0
-  - matplotlib-inline=0.1.6=py38hca03da5_0
-  - multidict=6.0.2=py38h1a28f6b_0
-  - munkres=1.1.4=py_0
-  - ncurses=6.4=h313beb8_0
-  - nest-asyncio=1.5.6=py38hca03da5_0
-  - numexpr=2.8.4=py38h79ee842_1
-  - openai=0.27.4=py38hca03da5_0
-  - openpyxl=3.0.10=py38h1a28f6b_0
-  - openssl=3.0.12=h1a28f6b_0
-  - orc=1.7.4=hdca1487_1
-  - pandas=2.0.3=py38h46d7db6_0
-  - pandas-stubs=1.5.3.230203=py38hca03da5_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pkgutil-resolve-name=1.3.10=py38hca03da5_0
-  - platformdirs=3.10.0=py38hca03da5_0
-  - plotly=5.9.0=py38hca03da5_0
-  - pooch=1.7.0=py38hca03da5_0
-  - prompt-toolkit=3.0.36=py38hca03da5_0
-  - psutil=5.9.0=py38h1a28f6b_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pympler=0.9=py_0
-  - pyopenssl=23.2.0=py38hca03da5_0
-  - pyparsing=3.0.9=py38hca03da5_0
-  - pysocks=1.7.1=py38hca03da5_0
-  - python=3.8.18=hb885b13_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-tzdata=2023.3=pyhd3eb1b0_0
-  - pytz=2023.3.post1=py38hca03da5_0
-  - pyzmq=25.1.0=py38h313beb8_0
-  - re2=2022.04.01=hc377ac9_0
-  - readline=8.2=h1a28f6b_0
-  - referencing=0.30.2=py38hca03da5_0
-  - requests=2.31.0=py38hca03da5_0
-  - scikit-learn=1.3.0=py38h46d7db6_0
-  - scipy=1.10.1=py38h9d039d2_1
-  - setuptools=68.0.0=py38hca03da5_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - snappy=1.1.9=hc377ac9_0
-  - sqlite=3.41.2=h80987f9_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - threadpoolctl=2.2.0=pyh0d69192_0
-  - tk=8.6.12=hb8d0fd4_0
-  - toml=0.10.2=pyhd3eb1b0_0
-  - toolz=0.12.0=py38hca03da5_0
-  - tornado=6.3.3=py38h80987f9_0
-  - tqdm=4.65.0=py38h86d0a89_0
-  - traitlets=5.7.1=py38hca03da5_0
-  - types-pytz=2022.4.0.0=py38hca03da5_1
-  - utf8proc=2.6.1=h1a28f6b_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - wheel=0.41.2=py38hca03da5_0
-  - widgetsnbextension=4.0.5=py38hca03da5_0
-  - xz=5.4.2=h80987f9_0
-  - yarl=1.8.1=py38h1a28f6b_0
-  - zeromq=4.3.4=hc377ac9_0
-  - zlib=1.2.13=h5a0b063_0
-  - zstd=1.5.5=hd90d995_0
+  - abseil-cpp=20230802.0
+  - aiohttp=3.8.5
+  - aiosignal=1.2.0
+  - appnope=0.1.2
+  - arrow-cpp=11.0.0
+  - asttokens=2.0.5
+  - async-timeout=4.0.2
+  - attrs=23.1.0
+  - aws-c-common=0.6.8
+  - aws-c-event-stream=0.1.6
+  - aws-checksums=0.1.11
+  - aws-sdk-cpp=1.8.185
+  - backcall=0.2.0
+  - blas=1.0
+  - boost-cpp=1.82.0
+  - bottleneck=1.3.5
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotli-python=1.0.9
+  - bzip2=1.0.8
+  - c-ares=1.19.1
+  - ca-certificates=2023.08.22
+  - certifi=2023.7.22
+  - cffi=1.15.1
+  - click=8.1.7
+  - colorama=0.4.6
+  - comm=0.1.2
+  - contourpy=1.0.5
+  - cryptography=41.0.3
+  - cycler=0.11.0
+  - debugpy=1.6.7
+  - decorator=5.1.1
+  - et_xmlfile=1.1.0
+  - executing=0.8.3
+  - fonttools=4.25.0
+  - freetype=2.12.1
+  - frozenlist=1.4.0
+  - gflags=2.2.2
+  - giflib=5.2.1
+  - glog=0.5.0
+  - grpc-cpp=1.48.2
+  - gtest=1.14.0
+  - icu=73.1
+  - idna=3.4
+  - importlib_metadata=6.0.0
+  - ipykernel=6.25.0
+  - ipython=8.12.2
+  - ipywidgets=8.0.4
+  - jedi=0.18.1
+  - jinja2=3.1.2
+  - joblib=1.2.0
+  - jpeg=9e
+  - jsonschema=4.19.2
+  - jsonschema-specifications=2023.7.1
+  - jupyter_client=8.6.0
+  - jupyter_core=5.5.0
+  - jupyterlab_widgets=3.0.5
+  - kiwisolver=1.4.4
+  - krb5=1.20.1
+  - lcms2=2.12
+  - lerc=3.0
+  - libboost=1.82.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcurl=8.4.0
+  - libcxx=14.0.6
+  - libdeflate=1.17
+  - libedit=3.1.20221030
+  - libev=4.33
+  - libevent=2.1.12
+  - libffi=3.4.4
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - libiconv=1.16
+  - libnghttp2=1.57.0
+  - libopenblas=0.3.21
+  - libpng=1.6.39
+  - libprotobuf=3.20.3
+  - libsodium=1.0.18
+  - libssh2=1.10.0
+  - libthrift=0.15.0
+  - libtiff=4.5.1
+  - libwebp=1.3.2
+  - libwebp-base=1.3.2
+  - llvm-openmp=14.0.6
+  - lz4-c=1.9.4
+  - matplotlib-base=3.7.2
+  - matplotlib-inline=0.1.6
+  - multidict=6.0.2
+  - munkres=1.1.4
+  - ncurses=6.4
+  - nest-asyncio=1.5.6
+  - numexpr=2.8.4
+  - openai=0.27.4
+  - openpyxl=3.0.10
+  - openssl=3.0.12
+  - orc=1.7.4
+  - pandas=2.0.3
+  - pandas-stubs=1.5.3.230203
+  - parso=0.8.3
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=3.10.0
+  - plotly=5.9.0
+  - pooch=1.7.0
+  - prompt-toolkit=3.0.36
+  - psutil=5.9.0
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pycparser=2.21
+  - pympler=0.9
+  - pyopenssl=23.2.0
+  - pyparsing=3.0.9
+  - pysocks=1.7.1
+  - python=3.8.18
+  - python-dateutil=2.8.2
+  - python-tzdata=2023.3
+  - pytz=2023.3.post1
+  - pyzmq=25.1.0
+  - re2=2022.04.01
+  - readline=8.2
+  - referencing=0.30.2
+  - requests=2.31.0
+  - scikit-learn=1.3.0
+  - scipy=1.10.1
+  - setuptools=68.0.0
+  - six=1.16.0
+  - snappy=1.1.9
+  - sqlite=3.41.2
+  - stack_data=0.2.0
+  - threadpoolctl=2.2.0
+  - tk=8.6.12
+  - toml=0.10.2
+  - toolz=0.12.0
+  - tornado=6.3.3
+  - tqdm=4.65.0
+  - traitlets=5.7.1
+  - types-pytz=2022.4.0.0
+  - utf8proc=2.6.1
+  - wcwidth=0.2.5
+  - wheel=0.41.2
+  - widgetsnbextension=4.0.5
+  - xz=5.4.2
+  - yarl=1.8.1
+  - zeromq=4.3.4
+  - zlib=1.2.13
+  - zstd=1.5.5
   - pip:
       - altair==5.1.2
       - backports-zoneinfo==0.2.1
@@ -183,4 +183,3 @@ dependencies:
       - urllib3==2.1.0
       - validators==0.22.0
       - zipp==3.17.0
-prefix: /Users/ukran1um/miniconda3/envs/ocr
